--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
                 <button type="button" class="option" data-value="mort" data-next="mort_type">Mortgage</button>
                 <button type="button" class="option" data-value="homesvc" data-next="homesvc_type">Home services</button>
             </div>
+            <div class="disclaimer">
+                <h3>B2B Lead Gen Form</h3>
+                <p>Captures lead's contact info and profile organically via website or through online marketing call to action placements.</p>
+            </div>
         </div>
 
         <div class="question" id="mort_type" data-show="prod=mort">
@@ -471,6 +475,7 @@
                 </div>
             </div>
         </div>
+
         <div class="question" id="homesvc_type" data-show="prod=homesvc">
             <div class="wrap">
                 <h3>Home service</h3>
@@ -482,6 +487,7 @@
                 <button type="button" class="option" data-value="equity">Home Equity</button>
             </div>
         </div>
+
         <nav>
             <button class="back" id="back" type="button">
                 <i class="fa-regular fa-arrow-left"></i>
